kube/olddev.yml
---
kind: Service
apiVersion: v1
metadata:
  name: postgres-service-dev
  namespace: venue-dev
spec:
  type: ExternalName
  externalName: venuedbdev.cksjgpgfbsbd.ca-central-1.rds.amazonaws.com
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: redis-deployment
  namespace: venue-dev
  labels:
    deployment: redis
spec:
  selector:
    matchLabels:
      pod: redis
  replicas: 1
  template:
    metadata:
      labels:
        pod: redis
    spec:
      containers:
      - env:
        - name: REDIS_PASSWORD
          valueFrom:
            secretKeyRef:
              name: redis-credentials
              key: password
        image: bitnami/redis:latest
        name: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: venue-dev
spec:
  selector:
    pod: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: venue-deployment
  namespace: venue-dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: venue
        name: venue
        version: "0.1.0"
    spec:
      containers:
      - args:
        - supervisord
        - -c
        - ./supervisord.conf
        - --nodaemon
        command:
        - /entrypoint.sh
        name: django-service
        image: volentixlabs/venueserver:v0.1.1-test
        ports:
        - containerPort: 8000
        #- containerPort: 9000 volentixlabs/venueserver:v0.0.27-beta
        #- containerPort: 5555 volentixlabs/venueserver:v0.0.26-beta
---
apiVersion: v1
kind: Service
metadata:
  name: venue-service
  namespace: venue-dev
  labels:
    name: venue
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
      name: external
  selector:
    name: venue
    version: "0.1.0"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "venue-django-ing"
  namespace: venue-dev
  labels:
    application: venue
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: venue.dev.vlabs.ninja
    http:
      paths:
      - path: /api
        backend:
          serviceName: "venue-service"
          servicePort: 80
      - path: /static
        backend:
          serviceName: "venue-service"
          servicePort: 80
      - path: /admin
        backend:
          serviceName: "venue-service"
          servicePort: 80
      - path: /docs
        backend:
          serviceName: "venue-service"
          servicePort: 80
      - path: /media/uploads
        backend:
          serviceName: "venue-service"
          servicePort: 80
